# clisp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
mal/: core.mal  step3_env.mal  step4_if_fn_do.mal  step6_file.mal  step7_quote.mal  step8_macros.mal  step9_try.mal  stepA_mal.mal
src/: CMakeLists.txt  ccommon.h  cconfig.h  ccorelib.c  ccorelib.h  clisp.h  cmal.h  cmem.c  cmem.h  cobj.c  cobj.h  cprinter.c  cprinter.h  creader.c  creader.h  cutils.c  cutils.h  cvalue.c  cvalue.h  cvm.c  cvm.h  main.c
